# parking_api

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  local.env  manage.py  pyproject.toml  pytest.ini
core/: admin.py  api.py  models.py  serializers.py  urls.py
core/migrations/: 0001_initial.py  0002_remove_historic_period_alter_historic_departure_time_and_more.py
parking_control/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_core.py
