[tool.poetry]
name = "parking_control"
version = "0.1.0"
description = ""
authors = ["Luiz Felipe <felipekjs36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-dotenv = "^1.4.2"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
autopep8 = "^2.0.1"
isort = "^5.12.0"
indenter = "^1.1.0"
pytest-django = "^4.5.2"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
ipdb = "^0.13.11"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
